@@ -97,6 +97,7 @@ public class ExtractingDocumentLoader extends ContentStreamLoader {
 
     templateAdd = new AddUpdateCommand(req);
     templateAdd.overwrite = params.getBool(UpdateParams.OVERWRITE, true);
+    templateAdd.commitWithin = params.getInt(UpdateParams.COMMIT_WITHIN, -1);
 
     //this is lightweight
     autoDetectParser = new AutoDetectParser(config);
